--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # utf-8
-setw -g utf8 on
-set -g status-utf8 on
+set-window-option -g utf8 on
+set-option -g status-utf8 on
 
 # prefix: C-b -> C-t
 unbind C-b
@@ -13,24 +13,29 @@ set-option -g bell-action none
 set-window-option -g monitor-activity on
 
 # use vi keybinds
-set -g mode-keys vi
+set-option -g mode-keys vi
 
 # reduce escape key delay
-set -sg escape-time 1
+set-option -sg escape-time 1
 
 # reload ~/.tmux.conf
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # show last window
-bind t last-window
+bind C-t last-window
+
+# enter copy mode
+unbind Escape
+bind Escape copy-mode
 
 # enable rbenv local
 set-environment -gu RBENV_VERSION
 
 # default status color
-set -g status-fg black
-set -g status-bg white
+set-option -g status-fg black
+set-option -g status-bg white
 
 # current window's status color
 set-window-option -g window-status-current-fg blue
 set-window-option -g window-status-current-bg white
+
