--- a/tmux.conf
+++ b/tmux.conf
@@ -39,3 +39,5 @@ set-option -g status-bg white
 set-window-option -g window-status-current-fg blue
 set-window-option -g window-status-current-bg white
 
+# use clipboard
+set-option -g default-command "reattach-to-user-namespace -l zsh"
