--- a/tmux.conf
+++ b/tmux.conf
@@ -41,3 +41,7 @@ set-window-option -g window-status-current-bg white
 
 # use clipboard
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# force true color
+set -g default-terminal 'xterm-256color'
+set -g terminal-overrides 'xterm:colors=256'
