--- a/tmux.conf
+++ b/tmux.conf
@@ -32,8 +32,7 @@ set-option -g status-fg black
 set-option -g status-bg white
 
 # current window's status color
-set-window-option -g window-status-current-fg blue
-set-window-option -g window-status-current-bg white
+set-window-option -g window-status-current-style fg="blue",bg="white"
 
 # use clipboard
 set-option -g default-command "reattach-to-user-namespace -l zsh"
