--- a/git/config
+++ b/git/config
@@ -3,7 +3,7 @@
 	email = pinzolo@gmail.com
 [core]
 	quotepath = false
-  editor = nvim
+    editor = nvim
 	excludesfile = /Users/pinzolo/.config/git/ignore
 	precomposeunicode = true
 	attributesfile = /Users/pinzolo/.config/git/attributes
@@ -13,11 +13,12 @@
 	ad = add --verbose
 	co = checkout
 	cm = commit
-  cb = checkout -b
 	st = status --branch --short
 	br = branch
 	brr = branch --remote
 	bra = branch --all
+	sw = switch
+	new = switch --create
 	lo = log --pretty=format:'%C(yellow)%h%Creset - %s %C(47)%ad %C(39)<%an>%Creset%C(09)%d%Creset' --date=short
 	ll = log --pretty=format:'%C(yellow)%h%Creset - %s %C(47)%ad %C(39)<%an>%Creset%C(09)%d%Creset' --date=short --decorate --numstat
 	lg = log --pretty=format:'%C(yellow)%h%Creset - %s %C(47)%ad %C(39)<%an>%Creset%C(09)%d%Creset' --date=short --abbrev-commit --graph # log graph
@@ -48,8 +49,6 @@
 	compactionHeuristic = true
 [difftool]
 	prompt = false
-[difftool "icdiff"]
-	cmd = /usr/local/bin/icdiff --line-numbers $LOCAL $REMOTE
 [mergetool]
 	prompt = false
 [url "git@github.com:"]
